--- a/resources/reset.css
+++ b/resources/reset.css
@@ -30,6 +30,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1.4;
+	font-size: 18px;
+	font-family: helvetica;
 }
 ol, ul {
 	list-style: none;
