--- a/resources/style.css
+++ b/resources/style.css
@@ -2,22 +2,27 @@ html{
   font-size: 18px;
   line-height:1.4;
 }
-header{
+.header{
   display: flex;
-  margin-top: 1rem !important;
+  margin-top: 2rem;
   align-items: center;
   color:white;
   justify-content: center;
+  height:3.5rem;
 
 }
 
 .part1{
-
   height:30rem;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/glasses-bg.png);
   background-size: cover;}
+
+.part1a{
+    display:flex;
+    justify-content: center;
+  }
 .header1{
     background-color: cadetblue;
       align-items: center;
@@ -27,30 +32,221 @@ header{
 #hl{
   align-items: center;
     display:flex;
-
 }
 
-img{
+.header img{
   padding-left: 2rem;
   padding-right: 1rem;
   height:1.5rem;
+  margin:0;
 }
 
-header ul{
+.header ul{
   display:flex;
   justify-content: flex-end;
 
 }
 
-header li{
+.header li{
   font-size: 1rem;
   color: white;
   list-style-type: none;
   padding:1rem 2rem;
 }
-
+#dontjustlook{
+  background-color: white;
+  padding: 1.5rem 5rem;
+  margin-top: 10rem;
+  margin-left: 750px;
+  margin-right: 150px;
+  font-weight:bold;
+  font-size:2rem;
+  line-height: 1.2;
+}
 .container{
-
+  display: flex;
   width: 960px;
+}
 
+
+.part2a{
+  height:8rem;
+  width:8rem;
+  text-align: center;
+  padding:3rem;
+}
+
+.part2{
+  display: flex;
+  justify-content: center;
+}
+
+.part3{
+  display: flex;
+  justify-content: center;
+}
+.part3a{
+  width:30%;
+
+  padding:0 2.5%;
+  margin-top: 3rem;
+}
+.part3a span{
+  font-family:Helvetica;
+  font-weight:bold;
+  font-size:1rem;
+  background-color: cadetblue;
+  padding:0.5rem 1.25rem;
+}
+.part3a p{
+  margin-top: 1rem;
+}
+
+.part4{
+  padding:9rem 1rem 4rem 4rem;
+}
+
+#part4middle{
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (min-width:1024px){
+#menu{
+  display: none;
+}
+}
+
+
+@media only screen and (max-width:1024px){
+  #menu{
+    display: none;
+  }
+  .header{
+    display: flex;
+    margin-top: 0;
+    align-items: center;
+    color:white;
+    justify-content: center;
+    height:3.5rem;
+  }
+
+  #dontjustlook{
+    background-color: white;
+    padding: 0.75rem 4rem;
+    margin-top: 5rem;
+    margin-left: 40%;
+    margin-right: ;
+    width:220px;
+    font-weight:bold;
+    font-size:1.33rem;
+    line-height: 1.2;
+  }
+  .part1{
+    height:25rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/glasses-bg.png);
+    background-size: cover;}
+
+    .container{
+      display: flex;
+      width: 100%;
+    }
+
+
+}
+
+
+@media only screen and (max-width:470px){
+.header1 ul{
+  display: none;
+}
+#menu{
+  display: flex;
+  padding:1em;
+}
+#headerfirstli{
+  display: none;
+}
+.header{
+  display: flex;
+  align-items: center;
+  color:white;
+  width: 100%;
+}
+.part1{
+  height:17rem;
+  background-repeat: no-repeat;
+  background-position: 25%;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/glasses-bg.png);
+  background-size: cover;
+}
+.part1a{
+    display:flex;
+  }
+  #dontjustlook{
+    background-color: white;
+    padding: 1rem 2rem;
+    margin-top: 9rem;
+    margin-left: 20%;
+    margin-right:20%;
+    width:220px;
+    font-weight:bold;
+    font-size:1.33rem;
+    line-height: 1.2;
+    text-align: center;
+  }
+  .part2{
+    margin-top:3.77rem;
+    display: block;
+
+  }
+  .part2a{
+    height:auto;
+    width:auto;
+    text-align: center;
+    padding:0.77rem;
+  }
+  .part2a p{
+    font-size: 0.77rem;
+  }
+  .part3{
+    display: block;
+
+  }
+  .part3a{
+    height:auto;
+    width:100%;
+    padding:0 2.5%;
+    margin-top: 3rem;
+  }
+  .part3a span{
+    font-family:Helvetica;
+    font-weight:bold;
+    font-size:1rem;
+    background-color: cadetblue;
+    padding-top:0.5rem;
+    padding-bottom:0.5rem;
+    width:90%;
+    display: flex;
+    justify-content: center;
+  }
+  .part3a p{
+    margin:1rem 5% 0;
+    font-size:0.77rem;
+  }
+  .part4 span{
+    display:none;
+  }
+
+  #part4middle{
+    display: flex;
+    justify-content: center;
+
+  }
+  .container{
+    display: flex;
+    justify-content: center;
+  }
 }
